trying to fix smooth scrolling on ios

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,6 +1,7 @@
 // Specific CSS for your home-page
 html {
   scroll-behavior: smooth;
+  -webkit-overflow-scrolling: touch;
 }
 
 .purple-background {
